Fix text-align: left on mobile nav.

--- a/website-guts/assets/css/main.scss
+++ b/website-guts/assets/css/main.scss
@@ -142,6 +142,7 @@ textarea {
         background: #052f60;
     }
     .nav {
+        text-align: left;
         padding: 0;
         li {
             list-style-type: none;
